Add centos_releasever for wallaby oooq release job
Change-Id: I36848e6e0abad622d02851886ac319b0ad8f8fbc

--- a/zuul.d/rdoinfo-jobs.yaml
+++ b/zuul.d/rdoinfo-jobs.yaml
@@ -406,6 +406,7 @@
       rdoinfo_release: wallaby
       branch_override: "cloudsig/wallaby"
       buildcontainers_version_hash: cloudsig-wallaby
+      centos_releasever: 8s
 
 - job:
     name: rdoinfo-tripleo-victoria-release-centos-8-scenario002-standalone
