Move tripleo-next-os pipeline to run puppet-7 jobs
- Rename openstack=puppet-integration line
- Run puppet-7 jobs in plave of puppet-6

Change-Id: I89a292b7db10d1de26ed0377e20d4df9b1b2de9f

--- a/zuul.d/project-templates-dependencies.yaml
+++ b/zuul.d/project-templates-dependencies.yaml
@@ -27,15 +27,13 @@
             vars:
               force_periodic: false
 
-    puppet-openstack-integration:
+    tripleo-next-os:
       jobs:
-        - puppet-openstack-integration-6-scenario000-tempest-centos-8-stream
-        - puppet-openstack-integration-6-scenario001-tempest-centos-8-stream
-        - puppet-openstack-integration-6-scenario002-tempest-centos-8-stream
-        - puppet-openstack-integration-6-scenario003-tempest-centos-8-stream
-        - puppet-openstack-integration-6-scenario003-tempest-centos-8-stream
-        - puppet-openstack-integration-6-scenario004-tempest-centos-8-stream
-
+        - puppet-openstack-integration-7-scenario000-tempest-centos-8-stream
+        - puppet-openstack-integration-7-scenario001-tempest-centos-8-stream
+        - puppet-openstack-integration-7-scenario002-tempest-centos-8-stream
+        - puppet-openstack-integration-7-scenario003-tempest-centos-8-stream
+        - puppet-openstack-integration-7-scenario004-tempest-centos-8-stream
 
 ## wallaby
 #############################################################
