Add podman ansible collection job
Change-Id: Ic165351e0c88a3c3b5c4f68f53ad453752835971

--- a/zuul.d/podman.yaml
+++ b/zuul.d/podman.yaml
@@ -45,3 +45,10 @@
       featureset_override:
         run_tempest: false
         use_os_tempest: true
+
+- job:
+    name: tripleo-ci-centos-8-standalone-podman-ansible
+    parent: tripleo-ci-centos-8-standalone
+    pre-run: playbooks/podman/pre-ansible-collection.yaml
+    required-projects:
+      - name: github.com/containers/ansible-podman-collections
