--- a/zuul.d/podman.yaml
+++ b/zuul.d/podman.yaml
@@ -45,3 +45,9 @@
       featureset_override:
         run_tempest: false
         use_os_tempest: true
+
+- job:
+    name: tripleo-ci-centos-8-standalone-podman-ansible
+    parent: tripleo-ci-centos-8-standalone
+    required-projects:
+      - name: github.com/containers/ansible-podman-collections
