--- a/zuul.d/podman.yaml
+++ b/zuul.d/podman.yaml
@@ -35,6 +35,7 @@
     name: tripleo-podman-integration-centos-8-standalone
     parent: tripleo-ci-base-standalone-periodic-centos-8
     branches: ^master$
+    voting: false
     run: playbooks/podman/install-podman-rpm.yaml
     required-projects:
       - name: github.com/containers/podman
