--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,17 @@
 - project:
     check:
       jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001:
+            vars:
+              featureset_override:
+                extra_args: >-
+                  -e /usr/share/openstack-tripleo-heat-templates/ci/environments/cutom-glance.yaml
+                tempest_tempest_conf_overrides:
+                  'image-feature-enabled.import_image': True
+                  'image.alternate_image_endpoint': 'image'
+                tempest_whitelist:
+                  - 'tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops'
+                  - 'tempest.api'
+                tempest_test_whitelist:
+                  - 'tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops'
+                  - 'tempest.api'
