--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,9 @@
 - project:
     check:
       jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001
+            vars:
+              featureset_override:
+                tempest_tempest_conf_overrides:
+                  import_image: true
+                  alternate_image_endpoint: 'http://127.0.0.1:9292'
