--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -32,16 +32,9 @@
         to_build: false
 
 - job:
-    name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-ovb-master
-    parent: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001
-    branches: ^master$
-    required-projects:
-      - opendev.org/openstack/openstack-virtual-baremetal
-
-- job:
     name: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-ovb-master
     parent: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001
-    branches: ^master$
+    branches: "^.*$"
     required-projects:
       - opendev.org/openstack/openstack-virtual-baremetal
 
