--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -28,9 +28,16 @@
       featureset: '001'
 
 - job:
+    name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-ovb-master
+    parent: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001
+    branches: ^master$
+    required-projects:
+      - opendev.org/openstack/openstack-virtual-baremetal
+
+- job:
     name: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-ovb-master
     parent: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001
-    branches: "^.*$"
+    branches: ^master$
     required-projects:
       - opendev.org/openstack/openstack-virtual-baremetal
 
