--- a/zuul.d/weirdo-jobs.yaml
+++ b/zuul.d/weirdo-jobs.yaml
@@ -1227,7 +1227,12 @@
     post-run: playbooks/weirdo/integration/post.yaml
     timeout: 7200
     required-projects:
-      - name: rdo-infra/weirdo
+      - rdo-infra/weirdo
+      - rdo-infra/ansible-role-weirdo-common
+      - rdo-infra/ansible-role-weirdo-kolla
+      - rdo-infra/ansible-role-weirdo-logs
+      - rdo-infra/ansible-role-weirdo-packstack
+      - rdo-infra/ansible-role-weirdo-puppet-openstack
     vars:
       selinux_enforcing: "false"
     nodeset:
@@ -1332,3 +1337,74 @@
     vars:
       rdoinfo_release: wallaby
       scenario: scenario004
+
+- job:
+    name: weirdo-periodic-base-centos9
+    parent: base
+    run: playbooks/rdoinfo/weirdo-periodic.yaml
+    post-run: playbooks/weirdo/integration/post.yaml
+    timeout: 7200
+    required-projects:
+      - rdo-infra/weirdo
+      - rdo-infra/ansible-role-weirdo-common
+      - rdo-infra/ansible-role-weirdo-kolla
+      - rdo-infra/ansible-role-weirdo-logs
+      - rdo-infra/ansible-role-weirdo-packstack
+      - rdo-infra/ansible-role-weirdo-puppet-openstack
+      - opendev.org/openstack/puppet-openstack-integration
+    vars:
+      selinux_enforcing: "false"
+      rdoinfo_release: yoga
+      centos_releasever: 9
+    nodeset:
+      nodes:
+        - name: cloud-centos-9-stream
+          label: cloud-centos-9-stream
+
+- job:
+    name: periodic-yoga-puppet-scenario000-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario000
+
+- job:
+    name: periodic-yoga-puppet-scenario001-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario001
+
+- job:
+    name: periodic-yoga-puppet-scenario002-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario002
+
+- job:
+    name: periodic-yoga-puppet-scenario003-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario003
+
+- job:
+    name: periodic-yoga-puppet-scenario004-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario004
+
+- job:
+    name: periodic-yoga-packstack-scenario001-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario001
+
+- job:
+    name: periodic-yoga-packstack-scenario002-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario002
+
+- job:
+    name: periodic-yoga-packstack-scenario003-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario003
