--- a/zuul.d/weirdo-jobs.yaml
+++ b/zuul.d/weirdo-jobs.yaml
@@ -91,6 +91,18 @@
     nodeset: rdo-centos-8-stream
 
 - job:
+    name: weirdo-integration-master-puppet-scenario000-centos9
+    parent: weirdo-integration-base
+    vars:
+      openstack_release: master
+      scenario: scenario000
+      centos_releasever: 8s
+    nodeset:
+      nodes:
+        - name: cloud-centos-9-stream
+          label: cloud-centos-9-stream
+
+- job:
     name: weirdo-integration-rocky-packstack-scenario002
     parent: weirdo-integration-base
     vars:
@@ -1340,3 +1352,69 @@
     vars:
       rdoinfo_release: wallaby
       scenario: scenario004
+
+- job:
+    name: weirdo-periodic-base-centos9
+    parent: base
+    run: playbooks/rdoinfo/weirdo-periodic.yaml
+    post-run: playbooks/weirdo/integration/post.yaml
+    timeout: 7200
+    required-projects:
+      - name: rdo-infra/weirdo
+      - name: opendev.org/openstack/puppet-openstack-integration
+    vars:
+      selinux_enforcing: "false"
+      rdoinfo_release: xena
+      centos_releasever: 9
+    nodeset:
+      nodes:
+        - name: cloud-centos-9-stream
+          label: cloud-centos-9-stream
+
+- job:
+    name: periodic-xena-puppet-scenario000-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario000
+
+- job:
+    name: periodic-xena-puppet-scenario001-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario001
+
+- job:
+    name: periodic-xena-puppet-scenario002-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario002
+
+- job:
+    name: periodic-xena-puppet-scenario003-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario003
+
+- job:
+    name: periodic-xena-puppet-scenario004-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario004
+
+- job:
+    name: periodic-xena-packstack-scenario001-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario001
+
+- job:
+    name: periodic-xena-packstack-scenario002-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario002
+
+- job:
+    name: periodic-xena-packstack-scenario003-centos-stream-9
+    parent: weirdo-periodic-base-centos9
+    vars:
+      scenario: scenario003
