Add weirdo train c7 jobs
Needed-By: https://review.rdoproject.org/r/c/config/+/33911
Change-Id: I210f7c17a20470f7158980a6430bc8e04c2518ee

--- a/zuul.d/weirdo-jobs.yaml
+++ b/zuul.d/weirdo-jobs.yaml
@@ -91,6 +91,34 @@
     nodeset: rdo-centos-8-stream
 
 - job:
+    name: weirdo-integration-train-packstack-scenario001
+    parent: weirdo-integration-base
+    vars:
+      openstack_release: train
+      scenario: scenario001
+
+- job:
+    name: weirdo-integration-train-packstack-scenario003
+    parent: weirdo-integration-base
+    vars:
+      openstack_release: train
+      scenario: scenario003
+
+- job:
+    name: weirdo-integration-train-puppet-scenario001
+    parent: weirdo-integration-base
+    vars:
+      openstack_release: train
+      scenario: scenario001
+
+- job:
+    name: weirdo-integration-train-puppet-scenario003
+    parent: weirdo-integration-base
+    vars:
+      openstack_release: train
+      scenario: scenario003
+
+- job:
     name: weirdo-integration-rocky-packstack-scenario002
     parent: weirdo-integration-base
     vars:
