--- a/zuul.d/weirdo-jobs.yaml
+++ b/zuul.d/weirdo-jobs.yaml
@@ -96,6 +96,7 @@
     vars:
       openstack_release: train
       scenario: scenario001
+      selinux_enforcing: "false"
 
 - job:
     name: weirdo-integration-train-packstack-scenario003
@@ -103,6 +104,7 @@
     vars:
       openstack_release: train
       scenario: scenario003
+      selinux_enforcing: "false"
 
 - job:
     name: weirdo-integration-train-puppet-scenario001
@@ -110,6 +112,7 @@
     vars:
       openstack_release: train
       scenario: scenario001
+      selinux_enforcing: "false"
 
 - job:
     name: weirdo-integration-train-puppet-scenario003
@@ -117,6 +120,7 @@
     vars:
       openstack_release: train
       scenario: scenario003
+      selinux_enforcing: "false"
 
 - job:
     name: weirdo-integration-rocky-packstack-scenario002
@@ -124,6 +128,7 @@
     vars:
       openstack_release: rocky
       scenario: scenario002
+      selinux_enforcing: "false"
 
 - job:
     name: weirdo-integration-rocky-puppet-scenario002
@@ -131,6 +136,7 @@
     vars:
       openstack_release: rocky
       scenario: scenario002
+      selinux_enforcing: "false"
 
 - job:
     name: weirdo-integration-queens-packstack-scenario001
