WIP Add DLRN-rpmbuild-centos9 job
Change-Id: I56161eead7f10fc3ba8c0a82df23fdae1d461ca4
Depends-On: https://softwarefactory-project.io/r/c/DLRN/+/21950

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -170,6 +170,21 @@
       centos_version: 'centos8'
 
 - job:
+    name: DLRN-rpmbuild-centos9
+    parent: DLRN-rpmbuild-base
+    branches: ^((rpm-master)|(^(?!queens|rocky|stein)(\w+)-rdo))$
+    vars:
+      centos_version: 'centos9'
+    nodeset: cloud-centos-9-stream-vexxhost
+
+- job:
+    name: DLRN-rpmbuild-centos9-pinned
+    parent: DLRN-rpmbuild-centos9
+    vars:
+      tag: 'xena-uc'
+      centos_version: 'centos9'
+
+- job:
     name: rpmlint
     run: playbooks/rpmlint/run.yaml
     dependencies:
