--- a/playbooks/DLRN/setup_dlrn.yaml
+++ b/playbooks/DLRN/setup_dlrn.yaml
@@ -1,12 +1,12 @@
 ---
 - name: Setup deps repo for mock
   get_url:
-    url: https://trunk.rdoproject.org/centos8-master/delorean-deps.repo
+    url: https://trunk.rdoproject.org/centos{{ ansible_distribution_major_version }}-master/delorean-deps.repo
     dest: /etc/yum.repos.d/delorean-deps.repo
   become: true
   when:
     - ansible_distribution == "CentOS"
-    - ansible_distribution_major_version == '8'
+    - ansible_distribution_major_version|int >= 8
 
 - name: Ensure bindep.txt dependencies are installed
   include_role:
@@ -27,7 +27,7 @@
   become: true
   when:
     - ansible_distribution == "CentOS"
-    - ansible_distribution_major_version == '8'
+    - ansible_distribution_major_version|int >= 8
 
 - name: Ensure user in mock group
   user:
