WIP Add DLRN-rpmbuild-centos9 job
Change-Id: I56161eead7f10fc3ba8c0a82df23fdae1d461ca4
Depends-On: https://softwarefactory-project.io/r/c/DLRN/+/21950

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -32,6 +32,8 @@
         - DLRN-build-tripleo-centos8
         - DLRN-rpmbuild
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9:
+            voting: false
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
         - distgit-cbs-validate-centos8
