--- a/zuul.d/zuul-legacy-project-templates.yaml
+++ b/zuul.d/zuul-legacy-project-templates.yaml
@@ -447,6 +447,8 @@
         - weirdo-dlrn-master-packstack-scenario001-centos8
         - weirdo-dlrn-master-puppet-scenario001-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9:
+            voting: false
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
