WIP Add DLRN-rpmbuild-centos9 job
Change-Id: I56161eead7f10fc3ba8c0a82df23fdae1d461ca4
Depends-On: https://softwarefactory-project.io/r/c/DLRN/+/21950

--- a/playbooks/DLRN/rpmbuild.yaml
+++ b/playbooks/DLRN/rpmbuild.yaml
@@ -33,6 +33,9 @@
           if [ ${CENTOS_VERS} = "centos8" ]; then
              export PYTHON_VERSION="py36"
              export TARGET="centos8-stream"
+          elif [ ${CENTOS_VERS} = "centos9" ]; then
+             export PYTHON_VERSION="py36"
+             export TARGET="centos9-stream"
           fi
           #
           if [ -z "$TAG" ];then
