--- a/playbooks/DLRN/setup_dlrn.yaml
+++ b/playbooks/DLRN/setup_dlrn.yaml
@@ -6,7 +6,16 @@
   become: true
   when:
     - ansible_distribution == "CentOS"
-    - ansible_distribution_major_version == '8'
+    - ansible_distribution_major_version == "8"
+
+- name: Setup deps repo for mock
+  get_url:
+    url: https://trunk.rdoproject.org/centos9/delorean-deps.repo
+    dest: /etc/yum.repos.d/delorean-deps.repo
+  become: true
+  when:
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_major_version == "9"
 
 - name: Ensure bindep.txt dependencies are installed
   include_role:
@@ -27,7 +36,7 @@
   become: true
   when:
     - ansible_distribution == "CentOS"
-    - ansible_distribution_major_version == '8'
+    - ansible_distribution_major_version|int >= 8
 
 - name: Ensure user in mock group
   user:
