--- a/zuul.d/zuul-legacy-project-templates.yaml
+++ b/zuul.d/zuul-legacy-project-templates.yaml
@@ -55,6 +55,7 @@
         - weirdo-dlrn-master-packstack-scenario003-centos8
         - weirdo-dlrn-master-puppet-scenario001-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -88,6 +89,7 @@
         - DLRN-build-tripleo-centos8
         - weirdo-dlrn-master-puppet-scenario002-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -121,6 +123,7 @@
         - weirdo-dlrn-master-packstack-scenario003-centos8
         - weirdo-dlrn-master-puppet-scenario001-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -156,6 +159,7 @@
         - weirdo-dlrn-master-puppet-scenario001-centos8
         - weirdo-dlrn-master-puppet-scenario002-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -193,6 +197,7 @@
         - weirdo-dlrn-master-puppet-scenario002-centos8
         - weirdo-dlrn-master-puppet-scenario004-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -237,6 +242,7 @@
             dependencies:
               - DLRN-rpmbuild-centos8-pinned
         - DLRN-rpmbuild-centos8-pinned
+        - DLRN-rpmbuild-centos9-pinned
         - DLRN-rpmbuild-pinned:
             branches: ^(queens|rocky|stein|train)-rdo$
         - distgit-cbs-validate:
@@ -279,6 +285,7 @@
         - weirdo-dlrn-master-packstack-scenario003-centos8
         - weirdo-dlrn-master-puppet-scenario003-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -312,6 +319,7 @@
         - DLRN-build-tripleo-centos8
         - weirdo-dlrn-master-puppet-scenario003-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -345,6 +353,7 @@
         - weirdo-dlrn-master-packstack-scenario001-centos8
         - weirdo-dlrn-master-puppet-scenario003-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -378,6 +387,7 @@
         - DLRN-build-tripleo-centos8
         - weirdo-dlrn-master-puppet-scenario004-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -412,6 +422,7 @@
         - weirdo-dlrn-master-puppet-scenario001-centos8
         - weirdo-dlrn-master-puppet-scenario003-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -447,6 +458,7 @@
         - weirdo-dlrn-master-packstack-scenario001-centos8
         - weirdo-dlrn-master-puppet-scenario001-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -482,6 +494,7 @@
         - weirdo-dlrn-master-puppet-scenario001-centos8
         - weirdo-dlrn-master-puppet-scenario003-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -516,6 +529,7 @@
         - DLRN-build-tripleo-centos8
         - weirdo-dlrn-master-puppet-scenario004-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
@@ -548,6 +562,7 @@
         - DLRN-build-tripleo-centos8
         - weirdo-dlrn-master-puppet-scenario002-centos8
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - DLRN-rpmbuild
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
