--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -32,6 +32,7 @@
         - DLRN-build-tripleo-centos8
         - DLRN-rpmbuild
         - DLRN-rpmbuild-centos8
+        - DLRN-rpmbuild-centos9
         - distgit-cbs-validate:
             branches: ^(queens|rocky|stein|train)-rdo$
         - distgit-cbs-validate-centos8
