--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -160,7 +160,7 @@
     branches: ^((rpm-master)|(^(?!queens|rocky|stein)(\w+)-rdo))$
     vars:
       centos_version: 'centos8'
-    nodeset: rdo-centos-8-stream
+    nodeset: cloud-centos-9-stream-vexxhost
 
 - job:
     name: DLRN-rpmbuild-centos8-pinned
@@ -168,6 +168,21 @@
     vars:
       tag: 'xena-uc'
       centos_version: 'centos8'
+
+- job:
+    name: DLRN-rpmbuild-centos9
+    parent: DLRN-rpmbuild-base
+    branches: ^((rpm-master)|(^(?!queens|rocky|stein)(\w+)-rdo))$
+    vars:
+      centos_version: 'centos9'
+    nodeset: rdo-centos-9-stream
+
+- job:
+    name: DLRN-rpmbuild-centos9-pinned
+    parent: DLRN-rpmbuild-centos9
+    vars:
+      tag: 'xena-uc'
+      centos_version: 'centos9'
 
 - job:
     name: rpmlint
