WES test older overcloud images
Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart/+/794607
Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart/+/794636
Change-Id: I3976e407d0e06a4eeaf1064f30a0a315c7c7d3f6

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,23 @@
+- job:
+    name: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-1
+    parent: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001
+    vars:
+      featureset_override:
+        to_build: false
+
+- job:
+    name: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-2
+    parent: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001
+    vars:
+      featureset_override:
+        to_build: false
+
 - project:
     check:
-      jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+      jobs:
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001:
+            vars:
+              featureset_override:
+                to_build: false
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-1
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-2
