--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -785,3 +785,41 @@
     vars:
       branch_override: "stable/victoria"
       release: victoria
+
+########## C E N T O S 8 WALLABY Check  ####################
+- job:
+    name: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-wallaby-branch
+    parent: tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001
+    override-checkout: "stable/wallaby"
+    branches: ^master$
+    voting: false
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-wallaby
+    parent: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-upload
+    branches: ^master$
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-wallaby-branch
+    parent: tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039
+    branches: ^master$
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-wallaby
+    parent: tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020
+    branches: ^master$
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
