--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -50,6 +50,13 @@
     voting: false
 
 - job:
+    name: tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-ovb-master
+    parent: tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039
+    branches: ^master$
+    required-projects:
+      - opendev.org/openstack/openstack-virtual-baremetal
+
+- job:
     name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset035
     parent: tripleo-ci-base-ovb-rdo
     branches: ^(stable/(newton|ocata|pike|queens|stein|train)).*$
