[DNM] skip weirdo jobs
also pick puppet-tripleo from trunk current
repo.

Change-Id: Ibb9f5c1e9fe28216452498beacc29138685abb04

--- a/playbooks/rdoinfo/weirdo-buildsys-tags.yaml
+++ b/playbooks/rdoinfo/weirdo-buildsys-tags.yaml
@@ -18,7 +18,7 @@
         - meta: end_play
       when:
         - not periodic_job|default(false)
-        - buildset_artifacts_url is not defined
+        - buildset_artifacts_url is defined
 
     - name: Create centos_releasever fact
       set_fact:
