[WIP] Use ara>1.0.0 report generation command-line
As part of the migration to post-1.0.0 ARA, we need to change the
command-line used for the report generation to match the one described
in [1].

[1] - https://ara.readthedocs.io/en/latest/cli.html#ara-manage-generate

Change-Id: Ie1f265534815e1f6cc9265056069563a008e4ba8

--- a/playbooks/weirdo/dlrn/run.yaml
+++ b/playbooks/weirdo/dlrn/run.yaml
@@ -119,7 +119,7 @@
           # WeIRDO uses ARA for ansible-playbook run visualization
           export WORKSPACE="{{ ansible_user_dir }}/workspace"
           mkdir -p $WORKSPACE
-          export ARA_DATABASE="sqlite:///$WORKSPACE/ara.sqlite"
+          export ARA_DATABASE_NAME="$WORKSPACE/ara.sqlite"
 
           # Backwards compat for project and openstack_release
           # (dmsimard) TODO: Clean this up ASAP
