--- a/playbooks/weirdo/dlrn/post.yaml
+++ b/playbooks/weirdo/dlrn/post.yaml
@@ -6,10 +6,10 @@
           export WORKSPACE="{{ ansible_user_dir }}/workspace"
           export WBASE="{{ ansible_user_dir }}/{{ zuul.projects['review.rdoproject.org/rdo-infra/weirdo'].src_dir }}"
           # WeIRDO uses ARA for ansible-playbook run visualization
-          export ARA_DATABASE="sqlite:///$WORKSPACE/ara-sqlite"
+          export ARA_DATABASE_NAME="$WORKSPACE/ara.sqlite"
 
           # Generate ARA playbook analysis (do not fail job if generation fails)
-          sudo -E ${WBASE}/.tox/ansible-playbook/bin/ara generate html /var/log/weirdo/ara || true
+          sudo -E ${WBASE}/.tox/ansible-playbook/bin/ara-manage generate /var/log/weirdo/ara || true
 
           mkdir logs
           sudo cp -a /var/log/weirdo/* logs/
