[WIP] Use ara>1.0.0 report generation command-line
As part of the migration to post-1.0.0 ARA, we need to change the
command-line used for the report generation to match the one described
in [1].

[1] - https://ara.readthedocs.io/en/latest/cli.html#ara-manage-generate

Change-Id: Ie1f265534815e1f6cc9265056069563a008e4ba8

--- a/playbooks/weirdo/integration/post.yaml
+++ b/playbooks/weirdo/integration/post.yaml
@@ -10,7 +10,7 @@
           export ARA_DATABASE="sqlite:///$WORKSPACE/ara-sqlite"
 
           # Generate ARA playbook analysis (do not fail job if generation fails)
-          sudo -E ${WBASE}/.tox/ansible-playbook/bin/ara generate html /var/log/weirdo/ara || true
+          sudo -E ${WBASE}/.tox/ansible-playbook/bin/ara-manage generate /var/log/weirdo/ara || true
 
           mkdir logs
           sudo cp -a /var/log/weirdo/* logs/
